--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "clsx": "^2.1.1",
     "framer-motion": "^11.12.0",
+    "lenis": "^1.1.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "6.4",
+    "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
@@ -31,7 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.16",
     "vite": "^6.0.1"
   }
 }
