--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@studio-freight/react-lenis": "^0.0.47",
     "@tailwindcss/forms": "^0.5.9",
     "clsx": "^2.1.1",
     "framer-motion": "^11.12.0",
