--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.1",
     "@studio-freight/react-lenis": "^0.0.47",
+    "@tabler/icons-react": "^3.26.0",
     "@tailwindcss/forms": "^0.5.9",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.12.0",
+    "framer-motion": "^11.15.0",
     "lenis": "^1.1.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
